--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -17,3 +17,11 @@ jobs:
                 print
                 (platform.processor())
             shell: python
+    run-windows-command:
+        runs-on: windows-latest
+        steps:
+          - name: PowerShell
+            run: get-location
+          - name: bash-prompt
+            run: pwd
+            shell: bash
