--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,6 +7,9 @@ jobs:
           - name: echo a string
             run: echo "Hello Anuj Welcome!"
 
+          - name: checkout
+            uses: actions/checkout@v1
+
           - name: multiline script
             run: |
                 node -v
